--- a/(C++) OpenGL Engine (In Progress)/OpenGL_HMWK/OpenGL_HMWK.vcxproj
+++ b/(C++) OpenGL Engine (In Progress)/OpenGL_HMWK/OpenGL_HMWK.vcxproj
@@ -148,12 +148,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Object.cpp" />
     <ClCompile Include="ShaderManager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Camera.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="ShaderManager.h" />
