--- a/(C++) OpenGL Engine (In Progress)/OpenGL_HMWK/OpenGL_HMWK.vcxproj
+++ b/(C++) OpenGL Engine (In Progress)/OpenGL_HMWK/OpenGL_HMWK.vcxproj
@@ -150,6 +150,7 @@
   <ItemGroup>
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Engine.cpp" />
+    <ClCompile Include="InputController.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Object.cpp" />
     <ClCompile Include="ShaderManager.cpp" />
@@ -157,6 +158,7 @@
   <ItemGroup>
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Engine.h" />
+    <ClInclude Include="InputController.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="ShaderManager.h" />
     <ClInclude Include="Structs.h" />
