--- a/(C++) OpenGL Engine (In Progress)/OpenGL_HMWK/OpenGL_HMWK.vcxproj
+++ b/(C++) OpenGL Engine (In Progress)/OpenGL_HMWK/OpenGL_HMWK.vcxproj
@@ -152,6 +152,7 @@
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="InputController.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Model.cpp" />
     <ClCompile Include="Object.cpp" />
     <ClCompile Include="ShaderManager.cpp" />
   </ItemGroup>
@@ -159,6 +160,7 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="InputController.h" />
+    <ClInclude Include="Model.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="ShaderManager.h" />
     <ClInclude Include="Structs.h" />
