--- a/(C++) OpenGL Engine (In Progress)/OpenGL_HMWK/OpenGL_HMWK.vcxproj.filters
+++ b/(C++) OpenGL Engine (In Progress)/OpenGL_HMWK/OpenGL_HMWK.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="InputController.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Model.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine.h">
@@ -51,6 +54,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="InputController.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Model.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
